--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,13 +1,25 @@
 logging.level.root=INFO
 logging.level.org.springframework.web=ERROR
 logging.level.org.hibernate=ERROR
-#spring.mvc.view.prefix=/WEB-INF/jsp/
-#spring.mvc.view.suffix=.jsp
-#spring.mvc.view.prefix=/resources/templates/
-#spring.mvc.view.suffix=.html
 server.servlet.context-path=/pet-clinic
 spring.datasource.platform=mysql
 spring.main.banner-mode=off
 spring.datasource.url=jdbc:mysql://localhost:3306/pet_clinic?serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=12345678
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#only used for local development as it drops the schema at the end of the session
+#for production, this would be set to "validate" validate the schema, makes no changes to the database
+# define DataSource properties
+#'LEVEL' is one of TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF.
+#spring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix=/resources/templates/
+spring.mvc.view.suffix=.html
+#spring.data.web.pageable.default-page-size=10
+#actuator
+#info.app.name =
+#info.app.description =
+#info.app.version =
+#management.endpoints.web.exposure.include=*
