added services layer

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 logging.level.root=INFO
 logging.level.org.springframework.web=ERROR
 logging.level.org.hibernate=ERROR
+logging.file.name=applicationLog.log
+# temp folder example
+#logging.file=${java.io.tmpdir}/app.log
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 server.servlet.context-path=/pet-clinic
 spring.datasource.platform=mysql
 spring.main.banner-mode=off
