--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.root=INFO
 logging.level.org.springframework.web=ERROR
 logging.level.org.hibernate=ERROR
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 logging.file.name=applicationLog.log
 # temp folder example
 #logging.file=${java.io.tmpdir}/app.log
